--- a/kibana.html
+++ b/kibana.html
@@ -21,7 +21,7 @@
                 <li>
                     <label>
                         <input type="checkbox" id="parse_query_string_array" oninput="prettyprint()"/>
-                        Decode to an array of string (Enable this option is helpful for spotting duplicate keys in query
+                        Decode to an array of string (Enabling this option is helpful for spotting duplicate keys in query
                         string)
                     </label>
                 </li>
